start final version together

--- a/assignments/a1_unsupervised.ipynb
+++ b/assignments/a1_unsupervised.ipynb
@@ -113,8 +113,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getEuclideanDistance(trainData1Coordinate, trainData2Coordinate, testData1Coordinate, testData2Coordinate):\n",
-    "    distance = math.sqrt((trainData1Coordinate-testData1Coordinate)**2+(trainData2Coordinate-testData2Coordinate)**2)\n",
+    "def getEuclideanDistance(point1x, point1y, point2x, point2y):\n",
+    "    distance = math.sqrt((point1x-point2x)**2+(point1y-point2y)**2)\n",
     "    return(distance)"
    ]
   },
@@ -655,7 +655,9 @@
     "\n",
     "After trying out multiple values of alpha and number of epochs, we can say that in both cases, a higher value leads to more movement of k1 and k2. The clusters adapt and change more and faster. Changing the alpha to a bigger number seems to have a stronger corrective effect that changing the epochs to a higher repetition.\n",
     "\n",
-    "Also, if we xhose suitable parameter values for alpha and epochs (big enough alpha, enough epochs) we will eventually find that the centroids converge to the true cluster means (since that is the definition of a mean)."
+    "When we increase alpha to a high value (e.g. 0.1) the points are not changing in between epochs any more because the movement is the same in all circuits. This is because we loop through the data set in the same order each passage.\n",
+    "\n",
+    "Also, if we chose suitable parameter values for alpha and epochs (big enough alpha, enough epochs) we will eventually find that the centroids converge to the true cluster means (since that is the definition of a mean)."
    ]
   },
   {
@@ -825,7 +827,9 @@
     "### What do you observe?\n",
     "\n",
     "Again the movement of r1, r2 are dependent on their random first value and the values of alpha and epoche. \n",
-    "However, the movement of r1, r2 seems to be more targeted and does not randomly jump here and there depending on which random point was classified just now. If we would set epoche to (move until no change between r1 and r1End and r2 and r2End) the final and mainly correct clustering could be achieved."
+    "However, the movement of r1, r2 seems to be more targeted and does not randomly jump here and there depending on which random point was classified just now. If we would set epoche to (move until no change between r1 and r1End and r2 and r2End) the final and mainly correct clustering could be achieved.\n",
+    "\n",
+    "Overall, this k-means version works faster and more reliable.\n"
    ]
   },
   {
@@ -930,9 +934,10 @@
     "\n",
     "since we define the random starting points randomly, we cannot be sure that we have one from each cluster and therefore, when they each move to one of the clusters (since we named the clusters in advance) it is possible, that the naming does not give the right expression in the end. \n",
     "\n",
+    "To fix that, we include a check where we compute the distance between the actual cluster center and our calculated centroids in order to decide which of the clusters is which.\n",
+    "\n",
     "Apart from that, we see that with good aligned parameters, the clusters seem to be mainly correct classified and only a few points on the borders are misclustered.\n",
     "\n",
-    "- fix ? that the random k points can be from any cluster and then everything is in the wrong colour? Or is that correct?\n",
     "\n"
    ]
   },
