first draft a2 task 1

--- a/assignments/a2supervised.ipynb
+++ b/assignments/a2supervised.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,8 +24,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from numpy import genfromtxt\n",
-    "\n",
-    "\n"
+    "from tabulate import tabulate\n"
    ]
   },
   {
@@ -783,130 +782,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0,\n",
-       "       1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 0, 0, 1, 0, 1,\n",
-       "       0, 1, 1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1, 1,\n",
-       "       0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0,\n",
-       "       0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1,\n",
-       "       1, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0,\n",
-       "       1, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1,\n",
-       "       0, 1, 0, 1, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0,\n",
-       "       1, 1, 0, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 0, 1,\n",
-       "       1, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1,\n",
-       "       1, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1,\n",
-       "       0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1,\n",
-       "       0, 0, 1, 0, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1,\n",
-       "       1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, 1, 0,\n",
-       "       1, 0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 1, 1, 0, 1, 1, 1,\n",
-       "       1, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1, 0,\n",
-       "       0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0, 1,\n",
-       "       0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 0,\n",
-       "       1, 1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1, 0, 0, 0,\n",
-       "       1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1,\n",
-       "       1, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0,\n",
-       "       1, 1, 0, 0, 0, 0, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0,\n",
-       "       1, 0, 0, 0, 1, 0, 1, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0,\n",
-       "       1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0,\n",
-       "       1, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1, 1,\n",
-       "       0, 1, 1, 0, 1, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1,\n",
-       "       1, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0,\n",
-       "       0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0,\n",
-       "       1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0,\n",
-       "       0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0,\n",
-       "       1, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1,\n",
-       "       0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0,\n",
-       "       0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 0, 1, 1, 0, 1, 0, 1, 1, 0, 1,\n",
-       "       1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0,\n",
-       "       0, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1,\n",
-       "       1, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1,\n",
-       "       1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1,\n",
-       "       0, 0, 1, 0, 0, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1,\n",
-       "       1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 0, 0, 0,\n",
-       "       1, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1,\n",
-       "       0, 0, 1, 1, 0, 1, 1, 0, 1, 0, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0,\n",
-       "       0, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1,\n",
-       "       1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 0, 0,\n",
-       "       0, 0, 0, 0, 1, 0, 1, 0, 0, 1])"
-      ]
-     },
-     "execution_count": 359,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d = dataCopy[2]\n",
-    "\n",
-    "w0 = round(random.random(), 2)\n",
-    "w1 = round(random.random(),2)\n",
-    "w2 = round(random.random(), 2)\n",
-    "\n",
-    "o = np.array((perceptron(w0, w1, w2, dataCopy.T)))\n",
-    "\n",
-    "o"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.          0.6311     -0.24703607 -0.05845253]\n",
-      " [ 0.          0.6311     -0.24703607 -0.05845253]\n",
-      " [ 0.          0.6311     -0.24703607 -0.05845253]\n",
+      "[[ 0.          0.7125     -0.21104053 -0.0546546 ]\n",
+      " [ 0.          0.7125     -0.21104053 -0.0546546 ]\n",
+      " [ 0.          0.7125     -0.21104053 -0.0546546 ]\n",
       " ...\n",
-      " [ 0.          0.6312     -0.24702844 -0.05826018]\n",
-      " [ 0.          0.6312     -0.24702844 -0.05826018]\n",
-      " [ 0.          0.6312     -0.24702844 -0.05826018]]\n",
-      "1118\n"
+      " [ 0.          0.7124     -0.21113815 -0.05466638]\n",
+      " [ 0.          0.7124     -0.21113815 -0.05466638]\n",
+      " [ 0.          0.7124     -0.21113815 -0.05466638]]\n",
+      "202\n"
      ]
     }
    ],
    "source": [
-    "alpha = 0.0001\n",
+    "# alpha = 0.0001\n",
     "\n",
-    "w0 = round(random.random(), 2)\n",
-    "w1 = round(random.random(),2)\n",
-    "w2 = round(random.random(), 2)\n",
+    "# w0 = round(random.random(), 2)\n",
+    "# w1 = round(random.random(),2)\n",
+    "# w2 = round(random.random(), 2)\n",
     "\n",
-    "d = data[2]\n",
-    "o = np.array((perceptron(w0, w1, w2, dataCopy.T)))\n",
+    "# d = data[2]\n",
+    "# o = np.array((perceptron(w0, w1, w2, dataCopy.T)))\n",
     "\n",
-    "epochsNeeded = 0\n",
-    "while not np.array_equal(d, o):\n",
+    "# epochsNeeded = 0\n",
+    "# while not np.array_equal(d, o):\n",
     "\n",
-    "    e = d - o\n",
-    "    arrayErrorsAndWeights = np.zeros((1000,4))\n",
-    "    position = 0\n",
-    "    for coordinates in data.T:\n",
-    "        x1 = coordinates[0]\n",
-    "        x2 = coordinates[1]\n",
+    "#     e = d - o\n",
+    "#     arrayErrorsAndWeights = np.zeros((1000,4))\n",
+    "#     position = 0\n",
+    "#     for coordinates in data.T:\n",
+    "#         x1 = coordinates[0]\n",
+    "#         x2 = coordinates[1]\n",
     "\n",
-    "        if e[position] != 0:\n",
-    "            w0 += alpha * e[position]\n",
-    "            w1 += alpha * e[position] * x1\n",
-    "            w2 += alpha * e[position] * x2\n",
+    "#         if e[position] != 0:\n",
+    "#             w0 += alpha * e[position]\n",
+    "#             w1 += alpha * e[position] * x1\n",
+    "#             w2 += alpha * e[position] * x2\n",
     "\n",
-    "        arrayErrorsAndWeights[position] = [e[position], w0, w1, w2]\n",
-    "        position += 1\n",
+    "#         arrayErrorsAndWeights[position] = [e[position], w0, w1, w2]\n",
+    "#         position += 1\n",
     "\n",
-    "    o = np.array((perceptron(w0, w1, w2, dataCopy.T)))\n",
-    "    epochsNeeded += 1\n",
+    "#     o = np.array((perceptron(w0, w1, w2, dataCopy.T)))\n",
+    "#     epochsNeeded += 1\n",
     "\n",
-    "print(arrayErrorsAndWeights)\n",
-    "print(epochsNeeded)"
+    "# print(arrayErrorsAndWeights)\n",
+    "# print(epochsNeeded)"
    ]
   },
   {
@@ -964,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [
     {
@@ -1060,15 +986,198 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "9. Print/Plot the confusion matrix for the above test. Can you relate each of the num- bers in the confusion matrix to the points of a given color on the previously gener- ated figure?"
+    "9. Print/Plot the confusion matrix for the above test. Can you relate each of the numbers in the confusion matrix to the points of a given color on the previously generated figure?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 401,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  True cluster    label 1    label 0\n",
+      "--------------  ---------  ---------\n",
+      "             1       0.49       0.01\n",
+      "             0       0          0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# confusion matrix\n",
+    "\n",
+    "totalLength = len(dataCopy.T)\n",
+    "numberHits = len(pointsTruePositivesX)\n",
+    "numberCorrectRejections = len(pointsCorrectRejectionsX)\n",
+    "numberFalsePositives = len(pointsFalsePositivesX)\n",
+    "numberFalseNegatives = len(pointsFalseNegativesX)\n",
+    "\n",
+    "confusionMatrix = [\n",
+    "    [\"1\", round(numberHits/totalLength, 2), round(numberFalseNegatives/totalLength, 2)],\n",
+    "    [\"0\", round(numberFalsePositives/totalLength, 2), round(numberCorrectRejections/totalLength, 2)]\n",
+    "]\n",
+    "\n",
+    "head = [\"True cluster\", \"label 1\", \"label 0\"]\n",
+    "\n",
+    "tableConfusionMatrix = tabulate(confusionMatrix, headers = head)\n",
+    "print(tableConfusionMatrix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "10. Print the metrics (accuracy, precision, recall, and F1) for all the tests: metrics should be an average for 30 tests with the same parameters but different initial weights."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 406,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average performance after 20 training epochs:\n",
+      "accuracy: 0.99\n",
+      "precision: 1.0\n",
+      "recall: 0.98\n",
+      "F1Score: 0.99\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataCopy = data.copy()\n",
+    "alpha = 0.0001\n",
+    "howManyEpochs = 20\n",
+    "\n",
+    "saveAccuracy = []\n",
+    "savePrecision = []\n",
+    "saveRecall = []\n",
+    "saveF1Score = []\n",
+    "\n",
+    "for i in range(30):\n",
+    "\n",
+    "    w0 = round(random.random(), 2)\n",
+    "    w1 = round(random.random(),2)\n",
+    "    w2 = round(random.random(), 2)\n",
+    "\n",
+    "    d = dataCopy[2]\n",
+    "    o = np.array((perceptron(w0, w1, w2, dataCopy.T)))\n",
+    "\n",
+    "    for i in range(howManyEpochs):\n",
+    "        e = d - o\n",
+    "        position = 0\n",
+    "        for coordinates in dataCopy.T:\n",
+    "            x1 = coordinates[0]\n",
+    "            x2 = coordinates[1]\n",
+    "\n",
+    "            if e[position] != 0:\n",
+    "                w0 += alpha * e[position]\n",
+    "                w1 += alpha * e[position] * x1\n",
+    "                w2 += alpha * e[position] * x2\n",
+    "            position += 1\n",
+    "\n",
+    "        o = np.array((perceptron(w0, w1, w2, dataCopy.T)))\n",
+    "\n",
+    "\n",
+    "    newColumnDataCopy = np.ones((1, dataCopy.shape[1]))\n",
+    "    dataCopy = np.append(dataCopy, newColumnDataCopy, axis = 0)\n",
+    "    dataCopy[3] = o\n",
+    "\n",
+    "\n",
+    "    pointsCorrectRejectionsX = []\n",
+    "    pointsFalsePositivesX = []\n",
+    "    pointsFalseNegativesX = []\n",
+    "    pointsTruePositivesX = []\n",
+    "\n",
+    "    pointsCorrectRejectionsY = []\n",
+    "    pointsFalsePositivesY = []\n",
+    "    pointsFalseNegativesY = []\n",
+    "    pointsTruePositivesY = []\n",
+    "\n",
+    "    for i in range(len(dataCopy.T)):\n",
+    "        if dataCopy.T[i][2] == 0 and dataCopy.T[i][3] == 0:\n",
+    "            pointsCorrectRejectionsX.append(dataCopy.T[i][0])\n",
+    "            pointsCorrectRejectionsY.append(dataCopy.T[i][1])\n",
+    "\n",
+    "        if dataCopy.T[i][2] == 0 and dataCopy.T[i][3] == 1:\n",
+    "            pointsFalsePositivesX.append(dataCopy.T[i][0])\n",
+    "            pointsFalsePositivesY.append(dataCopy.T[i][1])\n",
+    "        \n",
+    "        if dataCopy.T[i][2] == 1 and dataCopy.T[i][3] == 0:\n",
+    "            pointsFalseNegativesX.append(dataCopy.T[i][0])\n",
+    "            pointsFalseNegativesY.append(dataCopy.T[i][1])\n",
+    "\n",
+    "        if dataCopy.T[i][2] == 1 and dataCopy.T[i][3] == 1:\n",
+    "            pointsTruePositivesX.append(dataCopy.T[i][0])\n",
+    "            pointsTruePositivesY.append(dataCopy.T[i][1])\n",
+    "\n",
+    "\n",
+    "    totalLength = len(dataCopy.T)\n",
+    "    numberHits = len(pointsTruePositivesX)\n",
+    "    numberCorrectRejections = len(pointsCorrectRejectionsX)\n",
+    "    numberFalsePositives = len(pointsFalsePositivesX)\n",
+    "    numberFalseNegatives = len(pointsFalseNegativesX)\n",
+    "\n",
+    "    accuracy = (numberHits+numberCorrectRejections)/totalLength\n",
+    "    precision = numberHits/(numberHits + numberFalsePositives)\n",
+    "    recall = numberHits/(numberHits + numberFalseNegatives)\n",
+    "    F1Score = (2*precision*recall)/(precision+recall)\n",
+    "\n",
+    "    saveAccuracy.append(accuracy)\n",
+    "    savePrecision.append(precision)\n",
+    "    saveRecall.append(recall)\n",
+    "    saveF1Score.append(F1Score)\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "accuracy = round(sum(saveAccuracy)/len(saveAccuracy), 2)\n",
+    "precision = round(sum(savePrecision)/len(savePrecision), 2)\n",
+    "recall = round(sum(saveRecall)/len(saveRecall), 2)\n",
+    "F1Score = round(sum(saveF1Score)/len(saveF1Score), 2)\n",
+    "\n",
+    "\n",
+    "print(f\"average performance after {howManyEpochs} training epochs:\")\n",
+    "print(f\"accuracy: {accuracy}\")\n",
+    "print(f\"precision: {precision}\")\n",
+    "print(f\"recall: {recall}\")\n",
+    "print(f\"F1Score: {F1Score}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 405,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average performance after 20 training epochs:\n",
+      "accuracy: 0.99\n",
+      "precision: 1.0\n",
+      "recall: 0.98\n",
+      "F1Score: 0.99\n"
+     ]
+    }
+   ],
+   "source": [
+    "accuracy = round((numberHits+numberCorrectRejections)/totalLength, 2)\n",
+    "precision = round(numberHits/(numberHits + numberFalsePositives), 2)\n",
+    "recall = round(numberHits/(numberHits + numberFalseNegatives), 2)\n",
+    "F1Score = round((2*precision*recall)/(precision+recall), 2)\n",
+    "\n",
+    "print(f\"average performance after {howManyEpochs} training epochs:\")\n",
+    "print(f\"accuracy: {accuracy}\")\n",
+    "print(f\"precision: {precision}\")\n",
+    "print(f\"recall: {recall}\")\n",
+    "print(f\"F1Score: {F1Score}\")"
+   ]
   },
   {
    "cell_type": "markdown",
