--- a/assignments/assignment2/finalA2.ipynb
+++ b/assignments/assignment2/finalA2.ipynb
@@ -6,6 +6,9 @@
    "source": [
     "# Introduction to Machine Learning — 2024/2025 Supervised Learning\n",
     "\n",
+    "### Group: Carl George-Lembach and Jelena Meyer\n",
+    "\n",
+    "\n",
     "In the following exercises the objective is to program algorithms that, given examples and\n",
     "an expected output, learn to mimic the behavior present in the data."
    ]
