--- a/assignments/assignment2/finalA2.ipynb
+++ b/assignments/assignment2/finalA2.ipynb
@@ -50,13 +50,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0]\n",
+      " [0 1]\n",
+      " [1 0]\n",
+      " [1 1]]\n",
+      "[0 1 1 1]\n"
+     ]
+    }
+   ],
    "source": [
     "vector = np.array([[0,0],[0,1],[1,0],[1,1]])\n",
     "d = np.array([0,1,1,1])\n",
-    "#d = np.array([0,0,0,1])"
+    "print(vector)\n",
+    "print(d)"
    ]
   },
   {
