finally found bug

--- a/assignments/assignment3/100HasUtility0.ipynb
+++ b/assignments/assignment3/100HasUtility0.ipynb
@@ -278,13 +278,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def getUpdatedUtility(state, action, matrixQ, alpha, discountRate):\n",
     "    if state == 100:\n",
-    "        utilityState = matrixQ[action][state]\n",
+    "        \n",
+    "         = matrixQ[action][state]\n",
     "    else:\n",
     "        QAtStateAndAction = matrixQ[action][state]\n",
     "        nextState = stateTransitionFunction(state, action)\n",
