--- a/assignments/assignment4/a04.ipynb
+++ b/assignments/assignment4/a04.ipynb
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,9 +788,7 @@
     "    fitnessBestPcNewPop = measureFitnessOfPopulation(listWithBestIndividuals, correctBitPattern, withDifferentLengthBits = withDifferentLengthBits)\n",
     "\n",
     "    while noImprovementCounter < maxNoImprovement:\n",
-    "        #print(fitnessBestPcOldPop)\n",
     "        fitnessBestPcOldPop = fitnessBestPcNewPop\n",
-    "        #print(fitnessBestPcOldPop)\n",
     "        if onlyFitterMutations == True:\n",
     "            fullNewPopulation = mutateIfBetterPopulationFromBestIndividuals(correctBitPattern, listWithBestIndividuals)\n",
     "        else:\n",
@@ -801,12 +799,10 @@
     "\n",
     "        if fitnessBestPcNewPop <= fitnessBestPcOldPop:\n",
     "            noImprovementCounter += 1 \n",
-    "            #print(\"no improvement here!\")\n",
     "\n",
     "        fitnessBestPcPopulation.append(fitnessBestPcOldPop)\n",
     "        count += 1\n",
     "    fitnessBestPcPopulation.append(fitnessBestPcNewPop)\n",
-    "    #print(fitnessBestPcNewPop)\n",
     "\n",
     "    return (count, fitnessBestPcPopulation)"
    ]
@@ -1988,6 +1984,27 @@
     "plotBoxplot(boxBlotContent = listAllFitnessesToCompare, title = 'Average fitness of best 30 pc for different evolution strategies,\\n after stagnation (i.e. 1 generation no improvement)', yLabel = \"fitness of best 30 pc\", labels = labelList)\n",
     "plotBoxplot(boxBlotContent = listAllExecutionTimesToCompare, title = 'Average execution times for different evolution strategies', yLabel = \"execution time\", labels = labelList)\n",
     "plotBoxplot(boxBlotContent = listAllGenerationCountsToCompare, title = 'Average number of generations until stagnation for different evolution strategies', yLabel = \"number of generations\", labels = labelList)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 4\n",
+    "\n",
+    "Explain the changes that would be necessary in the evaluation function, to apply this procedure to the robot-maze problem in the previous set of exercises about Reinforcement Learning.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- all shortest ways (operationalised via patterns of movement, strings of LEFT, RIGHT, UP, DOWN) would be in a set of correct solutions.\n",
+    "- As soon as the search algorithm finds one of the correct (i.e shortest) solutions, it should get the maximum points (i.e. 1).\n",
+    "- So multiple solutions are possible. \n",
+    "- fitness function gives the value which is the highest (comparing current solutions to all correct solutions, take highest value)\n",
+    "\n",
+    "- \"punish\" (i.e. give low fitness values) for longer patterns"
    ]
   }
  ],
