some preprocessing versions

--- a/assignments/finalProject/supervisedLearners.ipynb
+++ b/assignments/finalProject/supervisedLearners.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,6 +301,22 @@
    "outputs": [],
    "source": [
     "bestAccuracyNeuralNetworks = clf.score(testDataWithoutCrit, testCrit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### maybe hyper parameter to tune here: Learning rate ???"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# how?"
    ]
   },
   {
