mit Carl besprechen

--- a/assignments/finalProject/unsupervised_learners.ipynb
+++ b/assignments/finalProject/unsupervised_learners.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Final Project - Machine Learning 2024/25\n",
+    "\n",
+    "### Unsupervised Learning algorithms - Clustering groups that are (not) prone to heart disease"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
