--- a/assignments/finalProject/Balanced_supervisedLearners.ipynb
+++ b/assignments/finalProject/Balanced_supervisedLearners.ipynb
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -640,6 +640,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.7316666666666667, 0.7633333333333333, 0.7616666666666667]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -652,12 +662,13 @@
     "ax.set_ylim([0.5, 1])\n",
     "ax.set_ylabel(\"prediction accuracy\")\n",
     "ax.set_title(\"performance of different heart disease classification algorithms\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "allAccuracies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -669,6 +680,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.7350993377483444, 0.762214983713355, 0.7631578947368421]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -681,12 +702,13 @@
     "ax.set_ylim([0.5, 1])\n",
     "ax.set_ylabel(\"prediction precision\")\n",
     "ax.set_title(\"performance of different heart disease classification algorithms\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "allAccuracies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -698,6 +720,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.7326732673267327, 0.7722772277227723, 0.7656765676567657]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -710,12 +742,13 @@
     "ax.set_ylim([0.5, 1])\n",
     "ax.set_ylabel(\"prediction recall\")\n",
     "ax.set_title(\"performance of different heart disease classification algorithms\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "allAccuracies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -727,6 +760,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.7338842975206611, 0.7672131147540983, 0.7644151565074137]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -739,7 +782,8 @@
     "ax.set_ylim([0.5, 1])\n",
     "ax.set_ylabel(\"prediction F1\")\n",
     "ax.set_title(\"performance of different heart disease classification algorithms\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "allF1"
    ]
   }
  ],
